# open-paws-fundraising

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  pyproject.toml  scores.json
.desloppify/: plan.json  plan.json.bak  progression.jsonl  query.json  state-python.json  state-python.json.bak
.github/workflows/: quality-gates.yml  security-scan.yml
dashboard/: app.py
docs/: grant-database.md
src/api/: server.py
src/donors/: churn_predictor.py  models.py  reengagement.py  segments.py
src/forecasting/: revenue_forecast.py
src/grants/: drafter.py  matcher.py  seed_grants.json  tracker.py
src/impact/: reporting.py
tests/: test_churn_predictor.py  test_donors_models.py  test_donors_segments.py  test_grant_matching.py  test_grants_tracker.py  test_impact_reporting.py  test_privacy_invariants.py  test_revenue_forecast.py
