[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "open-paws-fundraising"
version = "0.1.0"
description = "Fundraising intelligence platform for animal advocacy organizations"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["animal advocacy", "fundraising", "grant matching", "donor churn", "nonprofit"]

dependencies = [
    # API
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "httpx>=0.27.0",
    # Dashboard
    "streamlit>=1.35.0",
    # Database
    "sqlite-utils>=3.36.0",
    # ML — sklearn is the default; catboost is optional
    "scikit-learn>=1.4.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    # Forecasting
    "statsmodels>=0.14.0",
    # Utilities
    "python-dotenv>=1.0.0",
    "joblib>=1.4.0",
]

[project.optional-dependencies]
catboost = ["catboost>=1.2.5"]
embeddings = ["sentence-transformers>=3.0.0"]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]
all = [
    "open-paws-fundraising[catboost,embeddings,dev]",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
